3_TypeChecking/test/good/good04.cc
void main() {
	bool b = false;
	int i;
	
	if(b) {
		i = 2;
	}
}
