3_TypeChecking/test/bad/bad04.cc
void main() {
	bool b = false;
	int i = 12;

	if(i) {
		b = true;
	} else {
		b = false;
	}

}
